fix: menu text is misaligned with icons

--- a/app/assets/stylesheets/_modules/_menu.scss
+++ b/app/assets/stylesheets/_modules/_menu.scss
@@ -9,6 +9,9 @@
   padding: 1.5rem;
   background-color: var(--menu-item-bg);
   list-style: none;
+  display: flex;
+  align-items: center;
+  gap: .5rem;
 }
 
 .cm-menu-item[href],
